--- a/test.html
+++ b/test.html
@@ -9,7 +9,7 @@
         body {
             width: 100%;
             height: 250vh;
-            background: url('./naenang-main.png') no-repeat top / contain;
+            background: url('./assets/img/layout/naenang-notice.png') no-repeat top / contain;
         }
         * {
             margin:0;
