--- a/getInfo.html
+++ b/getInfo.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>내냉 개발중 - 회원가입페이지</title>
+    <title>내냉 개발중 - 회원가입 개인정보 페이지</title>
     <!-- link stylesheet -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css" />
     <link rel="stylesheet" href="css/reset.css" />
@@ -41,15 +41,8 @@
                 <div class="face"><span>얼굴이미지</span></div>
                 <div class="content flex fCol">
                     <h2>내냉</h2>
-                    <p style="margin-bottom: 20px;">레시피 저장소 🥄내냉에 오신 것을 환영합니다🎉</p>
-                    <button id="loginNaver" onclick="$('#checkLogin').html('Naver');">네이버로 회원가입</button>
-                    <button id="loginKakao" onclick="$('#checkLogin').html('Kakao');">카카오로 회원가입</button>
-                    <button id="loginGoogle" onclick="$('#checkLogin').html('Google');">구글로 회원가입</button>
+                    <p style="margin-bottom: 20px;">아직 해당 페이지 구축을 하지 못했습니다.</p>
                 </div>
-                <!-- 로그인 버튼 눌린 것 확인하기 위한 p태그 -->
-                <p>signUp? <span id="checkLogin">none</span></p>
-                <!-- 회원가입 세부 페이지를 보기 위한 a태그 삽입 -->
-                <p><a href="getInfo.html">회원가입 세부 페이지 확인</a></p>
             </div>
         </div>
     </main>
@@ -63,11 +56,5 @@
             </ul>
         </div>
     </footer>
-    <!-- 로그인 버튼 눌린 것 확인하기 위한 스크립트 -->
-    <script>
-        function checkLogin(query){
-            $('#checkLogin').html(query);
-        }
-    </script>
 </body>
 </html>
