--- a/signUp.html
+++ b/signUp.html
@@ -49,7 +49,7 @@
                 <!-- 로그인 버튼 눌린 것 확인하기 위한 p태그 -->
                 <p>signUp? <span id="checkLogin">none</span></p>
                 <!-- 회원가입 세부 페이지를 보기 위한 a태그 삽입 -->
-                <p><a href="getInfo.html">회원가입 세부 페이지 확인</a></p>
+                <p><a href="getInfo01.html">회원가입 세부 페이지 확인</a></p>
             </div>
         </div>
     </main>
